# AuraMed

./: .gitignore  README.md  pyproject.toml  setup_project_structure.sh
backend/: README.md  pyproject.toml
backend/notebooks/: README.md
docs/: auramed_project_outline.md
